--- a/DiffTerm/inputs/wjdlatexmacs.sty
+++ b/DiffTerm/inputs/wjdlatexmacs.sty
@@ -77,8 +77,9 @@
 \newcommand{\sansComp}{\ensuremath{\mathsf{comp}}}
 \newcommand{\sansC}{\ensuremath{\mathsf{C}}}
 \newcommand{\sansG}{\ensuremath{\mathsf{G}}}
+\newcommand{\sansg}{\ensuremath{\mathsf{g}}}
 \newcommand{\sansH}{\ensuremath{\mathsf{H}}}
-\newcommand{\sansO}{\ensuremath{\mathsf{O}}} % ALL FINITARY OPERATIONS
+\newcommand{\sansO}{\ensuremath{\mathsf{O}}}
 \newcommand{\sansP}{\ensuremath{\mathsf{P}}}
 \newcommand{\sansPoly}{\ensuremath{\mathsf{Pol}}}
 \newcommand{\sansPol}{\ensuremath{\mathsf{Pol}}}
@@ -88,9 +89,12 @@
 \newcommand{\Inv}[1]{\ensuremath{\mathcal{D}(#1)}}
 \newcommand{\Fix}[1]{\ensuremath{\breve{\mathcal{D}}(#1)}}
 \newcommand{\sansClo}{\ensuremath{\operatorname{\mathsf{Clo}}}}
-\newcommand{\sansR}{\ensuremath{\mathsf{R}}} % ALL FINITARY RELATIONS
+\newcommand{\sansR}{\ensuremath{\mathsf{R}}}
+\newcommand{\sansr}{\ensuremath{\mathsf{r}}}
 \newcommand{\sansS}{\ensuremath{\mathsf{S}}}
+\newcommand{\sanss}{\ensuremath{\mathsf{s}}}
 \newcommand{\sansT}{\ensuremath{\mathsf{T}}}
+\newcommand{\sanst}{\ensuremath{\mathsf{t}}}
 \newcommand{\bA}{\ensuremath{\mathbf{A}}}
 \newcommand{\bQ}{\ensuremath{\mathbf{Q}}}
 \newcommand{\bT}{\ensuremath{\mathbf{T}}}
