(Sec 5, 6) split algorithms into new Sec 6
+ finish complexity bounds/proofs for algorithms in Sec 6
+ this is basically a "final" draft, apart from the notes in the appendix
  which will be deleted in the next commit

--- a/DiffTerm/inputs/wjdlatexmacs.sty
+++ b/DiffTerm/inputs/wjdlatexmacs.sty
@@ -230,6 +230,15 @@
 \newcommand{\code}[1]{{\small {\tt #1}}}
 
 
+
+
+\newcommand{\Cayley}{\ensuremath{\mathsf{C}}}
+\newcommand{\tabT}{\ensuremath{\operatorname{T}}}
+\newcommand{\tabS}{\ensuremath{\operatorname{S}}}
+
+
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Acronyms
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
