--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -1927,20 +1927,20 @@ has a \ldto, as we now prove.
 \begin{proof}
 
 The proof is by induction on the size of $S$.  In the base case,
-$|S| = 2$, the claim holds by assumption. Fix $n\geq 2$ and assume that
-every subset of $\AsqBool$ of size $k \leq n$ has a \ldto. Let
+$|S| = 2$, the claim holds by assumption. Fix $\ell\geq 2$ and assume that
+every subset of $\AsqBool$ of size $k \leq \ell$ has a \ldto. Let
 \[
 S := \{(a_0, b_0, \chi_0), (a_1, b_1, \chi_1), \dots,
-        (a_{n}, b_{n},\chi_{n})\} \subseteq \AsqBool,
+        (a_{\ell}, b_{\ell},\chi_{\ell})\} \subseteq \AsqBool,
 \]
-so $|S| = n+1$.  We prove $S$ has a \ldto.
+so $|S| = \ell+1$.  We prove $S$ has a \ldto.
 
 Since $|S| \geq 3$, % and $\chi_i \in \{0,1\}$ for all $i$,
 there exist indices $k\neq j$ such that $\chi_k = \chi_j$.
-Assume without loss of generality that one such index is $j=n$,
+Assume without loss of generality that one such index is $j=\ell$,
 and define the set
 \[
-S' := S \mysetminus \{(a_n, b_n, \chi_n)\}.
+S' := S \mysetminus \{(a_\ell, b_\ell, \chi_\ell)\}.
 \]
 Since $|S'| < |S|$, there exists $p \in \dtr S'$.
 We split the remainder of the proof into two cases.
@@ -1948,16 +1948,16 @@ We split the remainder of the proof into two cases.
 \medskip
 
 %--------------------------------------
-\noindent \underline{Case $\chi_n = 0$}:
+\noindent \underline{Case $\chi_\ell = 0$}:
 Without loss of generality, assume
 \begin{equation*}
   \chi_0 = %% \chi_2 =
 \cdots =\chi_{k-1} = 1 \quad \text{and} \quad
-\chi_{k} = \cdots = \chi_{n} = 0.
+\chi_{k} = \cdots = \chi_{\ell} = 0.
 \end{equation*}
 If we define %% $T$ to be the set
 \[S_0 := \{(a_0, b_0, 1), (a_1, b_1, 1),
-\dots, (a_{k-1}, b_{k-1}, 1), (a_n, p(a_n, b_n, b_n), 0)\},\]
+\dots, (a_{k-1}, b_{k-1}, 1), (a_\ell, p(a_\ell, b_\ell, b_\ell), 0)\},\]
 then $|S_0| < |S|$, so $S_0$ has a \ldto, $q \in \dtr S_0$.
 We now show that
 \[
@@ -1966,8 +1966,8 @@ d(x,y,z) := q(x, p(x,y,y), p(x,y,z))
 is a local difference term operation for $S$.
 
 Since $\chi_n =0$, we must check that
-$a_n \comr{\thetan} d(a_n,b_n,b_n)$.
-If $\gamman := \Cg(a_n, p(a_n,b_n,b_n))$, then
+$a_\ell \comr{\thetan} d(a_\ell,b_\ell,b_\ell)$.
+If $\gamma := \Cg(a_\ell, p(a_\ell,b_\ell,b_\ell))$, then
 \begin{equation}
     \label{eq:100000}
   d(a_n,b_n,b_n) =
@@ -2497,52 +2497,27 @@ complexity of the whole procedure.
 
 
   
-  %\bibliographystyle{amsplain} %% or amsalpha
-  %% \bibliographystyle{alpha-url}
-  %% \printbibliography
-  \bibliographystyle{alphaurl}
-  \bibliography{inputs/refs}
-
-  
-
-
-  \end{document}
-  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-  %%%%%%%%%%%%%%%%%%%%%%%%%%%%  END OF DOCUMENT %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
   
   
   \appendix  
     
     \section{Alternative approaches/algorithms/notes}
     \subsection{A straight-forward (but intractable) algorithm}
-    Define $\mathbf{c}$, $\mathbf{g}_0$, $\mathbf{g}_1$, $\mathbf{g}_2 \in \alg{A}^{2n}$ 
-    and $R \subseteq A^{2n}\times A^{2n}$ as follows:
+    Let $N = 2n^2$.  Define $\mathbf{c}$, $\mathbf{g}_0$, $\mathbf{g}_1$, $\mathbf{g}_2 \in \alg{A}^{N}$ 
+    and $R \subseteq A^{N}\times A^{N}$ as follows:
     \begin{equation}
     \begin{array}{cccccccccc}
-      \mathbf{g}_0 &= (a_0 & a_0 &a_1 &a_1 &a_2 &a_2 & \dots & a_{n-1} & a_{n-1}) \\
-      \mathbf{g}_1 &= (b_0 & a_0 &b_1 &a_1 &b_2 &a_2 & \dots & b_{n-1} & a_{n-1}) \\
-      \mathbf{g}_2 &= (b_0 & b_0 &b_1 &b_1 &b_2 &b_2 & \dots & b_{n-1} & b_{n-1})\\[4pt]
+      \mathbf{g}_0 &= (a_0 & a_0 &a_1 &a_1 &a_2 &a_2 & \dots & a_{N-1} & a_{N-1}) \\
+      \mathbf{g}_1 &= (b_0 & a_0 &b_1 &a_1 &b_2 &a_2 & \dots & b_{N-1} & a_{N-1}) \\
+      \mathbf{g}_2 &= (b_0 & b_0 &b_1 &b_1 &b_2 &b_2 & \dots & b_{N-1} & b_{N-1})\\[4pt]
         R  & = (\delta_0 & =  & \delta_1 & = & \delta_2 & = & \dots  & \delta_{n-1} & = \; )\\ [4pt]
-      \mathbf{c}            & = (a_0     & b_0       & a_1      & b_1      & a_2      & b_2      & \dots  & a_{n-1}, & b_{n-1}) \\
+      \mathbf{c}            & = (a_0     & b_0       & a_1      & b_1      & a_2      & b_2      & \dots  & a_{N-1}, & b_{N-1}) \\
     \end{array}
     \end{equation}
-    where $\delta_k= \com{\theta_k}$.  We want a term $t$ such that $t^{\alg{A}^{2n}}(\mathbf{g}_0, \mathbf{g}_1, \mathbf{g}_2)\mathrel{R} \mathbf{c}$.
-    In other terms, we want that $t^{\alg{A}^{2n}}(\mathbf{g}_0, \mathbf{g}_1, \mathbf{g}_2)$ belongs to the set
+    where $\delta_k= \com{\theta_k}$.  We want a term $t$ such that $t^{\alg{A}^{N}}(\mathbf{g}_0, \mathbf{g}_1, \mathbf{g}_2)\mathrel{R} \mathbf{c}$.
+    In other terms, we want that $t^{\alg{A}^{N}}(\mathbf{g}_0, \mathbf{g}_1, \mathbf{g}_2)$ belongs to the set
     \[
-    \mathbf{C} := a_0/\delta_0 \times \{b_0\} \times a_1/\delta_1 \times \{b_1\} \times   \dots \times a_{n-1}/\delta_{n-1} \times \{b_{n-1}\}
+    \mathbf{C} := a_0/\delta_0 \times \{b_0\} \times a_1/\delta_1 \times \{b_1\} \times   \dots \times a_{N-1}/\delta_{N-1} \times \{b_{N-1}\}
     \]
     
     \noindent \textbf{An {\small EXPTIME} algorithm.}
@@ -2592,11 +2567,36 @@ complexity of the whole procedure.
 
 
 
+  
+  %\bibliographystyle{amsplain} %% or amsalpha
+  %% \bibliographystyle{alpha-url}
+  %% \printbibliography
+  \bibliographystyle{alphaurl}
+  \bibliography{inputs/refs}
+
+  
 
 
 
 
 
+
+
+  \end{document}
+  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+  %%%%%%%%%%%%%%%%%%%%%%%%%%%%  END OF DOCUMENT %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
 
 
 
